--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,13 +1,17 @@
 <div>
-    <h1>Mi app</h1>
+    <h1>
+        Hola!, como estas {{ user.name }} ?
+    </h1>
+    {{#if user.isAdmin}}
+        {{#each food}}
+            <div>
+                <p>Producto: {{this.name}}</p>
+                <p>Precio: {{this.price}}$</p>
+            </div>
+        {{/each}}
 
-    <form action="">
+    {{else}}
+        <h2>no sos admin je</h2>
 
-        <input type="text" id="text-i">
-        <p id="text-p"></p>
-
-    </form>
+    {{/if}}
 </div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/script.js"></script>
